# htmx_rs_sandbox

./: .env  Cargo.toml  Justfile  bacon.toml  notes.md
assets/public/: styles.css
migrations/: 20241220045242_base_logic.up.sql
src/: main.rs  page2.rs  star_svg.rs
