[package]
name = "htmx_rs_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
hyper = "1.5.2"
maud = { version = "0.26.0", features = ["axum"] }
rust-embed = "8.5.0"
# TODO: TLS someday see README
sqlx = { version = "0.8.2", features = [ "runtime-tokio" ] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"]}
